# Whispr-Windows

./: LICENSE  README.md  package.json
src/: index.html  prompter-floating.html  prompter-topbar.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_scripts.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs
src-tauri/src/commands/: mod.rs  scripts.rs  settings.rs  system.rs  window.rs
src/css/: animations.css  components.css  daynight.css  floating.css  main.css  prompter.css  settings.css  topbar.css  variables.css
src/js/: app.js  countdown.js  editor.js  keyboard-handler.js  markdown-parser.js  practice-mode.js  prompter-engine.js  prompter-floating.js  prompter-topbar.js  script-manager.js  settings-manager.js  theme-manager.js  utils.js  voice-scroll.js
